0.900.0 (DRAFT)
---------------

- refactored internals to use plugin-approach 

- introduced PerAccount and Global hooks that plugins can implement 

- introduced `member_added()` plugin event. 


0.800.0
-------

- use latest core 1.25.0 

- refine tests and some internal changes to core bindings

0.700.0
---------

- lots of new Python APIs

- use rust core-beta23 

- introduce automatic versioning via setuptools_scm, 
  based on py-X.Y.Z tags 

- integrate latest DCC core-rust with dc_close() fixes

- provide a account.shutdown() method  and improve termination
  logic also in tests. also fixes output-clubbering during 
  test runs. 


0.600.0
---------

- use new experimental full-Rust Delta Chat core
- support Autocrypt Setup Messages 
- remove synchronous events 
- use CircleCI for continous integration and packaging of Linux wheels
- use docker image for building wheels
- fix code documentation links 

0.9.0
-----

- build against latest deltachat core (0.41 ++) with RPGP compiled in
- streamline package building
- allow installing from devpi.net package index


0.8.2
-----

- adapt to deleted and new event names 

0.8.1
-----

- changed license to MPL 2.0, see https://github.com/deltachat/deltachat-core/issues/403
  for the confirmation from contributors. 


0.8.0
-----

- now depends on core tagged as v0.23.0

- drop send_image and other helper methods in favor of 
  just a Chat.send_file() that takes all kinds of media types

- introduce Message.get_mime_headers() which returns 
  the headers for an incoming message if the ``save_mime_headers``
  config option is set. 

- add Message.time_received attribute, now returning an unaware
  datetime

- set_config() and get_config() now throw an error if a config option
  does not exist 

- some API renames

0.7.1
-----

- add Account.get_infostring() to show low-level info about account state


0.7
---

- add Chat.delete(), Chat.send_image() and Chat.send_file()
