@@ -4505,22 +4505,13 @@ int64_t          dc_lot_get_timestamp     (const dc_lot_t* lot);
 
 
 /**
- * (DEPRECATED)
- *
- * @param data1 (int) chat_id
- * @param data2 (int) contact_id
- * @return 0
- */
-#define DC_EVENT_SECUREJOIN_MEMBER_ADDED 2062
-
-/**
  * This event is sent for each member that gets added to a (verified or unverified) chat. 
  *
  * @param data1 (int) chat_id
  * @param data2 (int) contact_id
  * @return 0
  */
-#define DC_EVENT_MEMBER_ADDED 2063
+#define DC_EVENT_MEMBER_ADDED 2062
 
 /**
  * This event is sent for each member that gets removed from a (verified or unverified) chat. 
@@ -4529,7 +4520,7 @@ int64_t          dc_lot_get_timestamp     (const dc_lot_t* lot);
  * @param data2 (int) contact_id
  * @return 0
  */
-#define DC_EVENT_MEMBER_REMOVED 2064
+#define DC_EVENT_MEMBER_REMOVED 2063
 
 /**
  * @}
