@@ -5,8 +5,10 @@
 
 - introduced PerAccount and Global hooks that plugins can implement 
 
-- introduced `member_added()` plugin event. 
+- introduced `member_added()` and `member_removed` plugin events. 
 
+- introduced two documented examples for an echo and a group-membership
+  tracking plugin. 
 
 0.800.0
 -------
